--- a/examples/env.yaml
+++ b/examples/env.yaml
@@ -31,6 +31,7 @@ kfold:
   seed: 42
 
 inference:
+  max_len: 128 
   pretrained: "roberta-base"
   model_path: "roberta-base/model.bin"
   tokenizer_path: "roberta-base/tokenizer"
