added different architectures support for NERP

--- a/examples/env.yaml
+++ b/examples/env.yaml
@@ -2,12 +2,14 @@ torch:
   device: "cuda"
 data:
   train_data: 'data/train.csv'
+  valid_data: "data/valid.csv"
   train_valid_split: 0.2
   test_data: 'data/test.csv'
   limit: 10
   tag_scheme: ['B-PER', 'I-PER', 'B-ORG', 'I-ORG', 'B-LOC', 'I-LOC', 'B-MISC', 'I-MISC']
 
 model: 
+  archi: "baseline"
   max_len: 128 
   dropout: 0.1
   hyperparameters:
@@ -30,6 +32,7 @@ kfold:
   seed: 42
 
 inference:
+  archi: "crf"
   max_len: 128 
   pretrained: "roberta-base"
   model_path: "roberta-base/model.bin"
