--- a/examples/env.yaml
+++ b/examples/env.yaml
@@ -5,11 +5,12 @@ data:
   valid_data: "data/valid.csv"
   train_valid_split: 0.2
   test_data: 'data/test.csv'
-  limit: 10
+  limit: 0
   tag_scheme: ['B-PER', 'I-PER', 'B-ORG', 'I-ORG', 'B-LOC', 'I-LOC', 'B-MISC', 'I-MISC']
 
 model: 
-  archi: "baseline"
+  archi: "bilstm-crf"
+  o_tag_cr: True
   max_len: 128 
   dropout: 0.1
   hyperparameters:
